--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "steven-landgraf",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://StevenLandgraf.github.io/Website",
+  "homepage": "https://stevenlandgraf.github.io/Website",
   "dependencies": {
     "gh-pages": "^6.1.1",
     "lucide-react": "^0.395.0",
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
   }
 }
